versioned_docs/version-2.20/reference/subsystems/scalafmt.mdx
---
title: scalafmt
description: |
  scalafmt (https://scalameta.org/scalafmt/)
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

scalafmt (https://scalameta.org/scalafmt/)

Backend: <span className="color--primary">`pants.backend.experimental.scala.lint.scalafmt`</span>

Config section: <span className="color--primary">`[scalafmt]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]scalafmt-skip`}
  env_repr='PANTS_SCALAFMT_SKIP'
  toml_repr={`[scalafmt]
skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use scalafmt when running `pants fmt` and `pants lint`.

</Option>

## Advanced options

### `artifacts`

<Option
  cli_repr={`--scalafmt-artifacts="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SCALAFMT_ARTIFACTS'
  toml_repr={`[scalafmt]
artifacts = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "org.scalameta:scalafmt-cli_2.13:{version}"\n]`}
>

Artifact requirements for this tool using specified as either the address of a `jvm_artifact` target or, alternatively, as a colon-separated Maven coordinates (e.g., `group:name:version`). For Maven coordinates, the string `{version}` version will be substituted with the value of the `[scalafmt].version` option.

</Option>

### `config_file_name`

<Option
  cli_repr={`--scalafmt-config-file-name=<str>`}
  env_repr='PANTS_SCALAFMT_CONFIG_FILE_NAME'
  toml_repr={`[scalafmt]
config_file_name = <str>`}
  default_repr={`.scalafmt.conf`}
>

Name of a config file understood by scalafmt (https://scalameta.org/scalafmt/docs/configuration.html). The plugin will search the ancestors of each directory in which Scala files are found for a config file of this name.

</Option>

### `jvm_options`

<Option
  cli_repr={`--scalafmt-jvm-options="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SCALAFMT_JVM_OPTIONS'
  toml_repr={`[scalafmt]
jvm_options = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

List of JVM options to pass to `scalafmt` JVM processes.

Options set here will be added to those set in `[jvm].global_options`. Please check the documentation for the `jvm` subsystem to see what values are accepted here.

</Option>

### `lockfile`

<Option
  cli_repr={`--scalafmt-lockfile=<str>`}
  env_repr='PANTS_SCALAFMT_LOCKFILE'
  toml_repr={`[scalafmt]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` option. See https://github.com/pantsbuild/pants/blob/release_2.20.2rc0/src/python/pants/backend/scala/lint/scalafmt/scalafmt.default.lockfile.txt for the default lockfile contents.

To use a custom lockfile, set this option to a file path relative to the build root, then run `pants jvm-generate-lockfiles --resolve=scalafmt`.

</Option>

### `orphan_files_behavior`

<Option
  cli_repr={`--scalafmt-orphan-files-behavior=<OrphanFilepathConfigBehavior>`}
  env_repr='PANTS_SCALAFMT_ORPHAN_FILES_BEHAVIOR'
  toml_repr={`[scalafmt]
orphan_files_behavior = <OrphanFilepathConfigBehavior>`}
  one_of='ignore, error, warn'
  default_repr={`error`}
>

Whether to ignore, error or show a warning when files are found that are not covered by the config file provided in `[scalafmt].config_file_name` setting.

</Option>

### `version`

<Option
  cli_repr={`--scalafmt-version=<str>`}
  env_repr='PANTS_SCALAFMT_VERSION'
  toml_repr={`[scalafmt]
version = <str>`}
  default_repr={`3.2.1`}
>

Version string for the tool. This is available for substitution in the `[scalafmt].artifacts` option by including the string `{version}`.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
